--- a/style.css
+++ b/style.css
@@ -160,3 +160,22 @@ body.dark-mode footer {
     padding: 1rem;
   }
 }
+.slideshow-container {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  overflow: hidden;
+}
+
+.slide {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
+
+.slide.active {
+  opacity: 1;
+  z-index: 10;
+}
